Fixed alignment issues and the banner now stops scrolling on mouse over

--- a/css/default.css
+++ b/css/default.css
@@ -24,15 +24,25 @@ html, body {
 #banner {
 	position: absolute;
 	width: 400px;
-	height: 102px;
+	height: 75px;
 	left: 910px;
 	top: 0px;
 	overflow: hidden;
 }
 
+p.banner-title {
+	position: absolute;
+	margin-bottom: 2px;
+	left: 0;
+	right: 0;
+	margin-left: auto; 
+	margin-right: auto; 
+	width: 200px;
+}
+
 p.banner-data {
 	position: absolute;
-	width: 400px;
+	width: 500px;
 	top: 30px;
 	margin-top: 0px;
 	margin-bottom: 0px;
